[Test du Rag sur diférrent question contenu dans les documents ]

--- a/notebook/prototype.ipynb
+++ b/notebook/prototype.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,49 +157,65 @@
     "    return {\"context\": retrieved_docs}\n",
     "\n",
     "\n",
-    "# Fonction de génération de la réponse formatée avec le rôle et les sources\n",
+    "# Fonction de génération de la réponse\n",
     "def generate(state: State):\n",
-    "    # Agrégation du contenu des documents récupérés\n",
-    "    docs_content = \"\\n\\n\".join(doc.page_content for doc in state[\"context\"])\n",
-    "    \n",
-    "    # (Optionnel) Construction d'une liste de sources depuis les métadonnées de chaque document\n",
-    "    sources_list = []\n",
+    "    # Agrégation du contenu des documents récupérés avec détails sur les sources\n",
+    "    docs_details = []\n",
     "    for doc in state[\"context\"]:\n",
-    "        # Exemple : extraire le chemin du fichier ou toute métadonnée pertinente\n",
-    "        source_info = doc.metadata.get(\"source\", \"Source inconnue\")\n",
-    "        sources_list.append(source_info)\n",
-    "    # Formatage sommaire des sources, si besoin (le LLM pourra les intégrer dans sa réponse)\n",
-    "    formatted_sources = \"\\n\".join(f\"[Document: {src}]\" for src in sources_list)\n",
+    "        source = doc.metadata.get(\"source\", \"Source inconnue\")\n",
+    "        file_name = os.path.basename(source)\n",
+    "        \n",
+    "        # Extraction des métadonnées : section, page, date de mise à jour\n",
+    "        section = doc.metadata.get(\"section\", \"Section non spécifiée\")\n",
+    "        page = doc.metadata.get(\"page\", \"Page non spécifiée\")\n",
+    "        update_date = doc.metadata.get(\"update_date\", \"Date non disponible\")\n",
+    "        \n",
+    "        docs_details.append({\n",
+    "            \"content\": doc.page_content,\n",
+    "            \"file_name\": file_name,\n",
+    "            \"section\": section,\n",
+    "            \"page\": page,\n",
+    "            \"update_date\": update_date\n",
+    "        })\n",
     "    \n",
-    "    # Instructions système décrivant le rôle du LLM et le format de réponse attendu\n",
+    "    # Agrégation du contenu des documents\n",
+    "    docs_content = \"\\n\\n\".join(doc[\"content\"] for doc in docs_details)\n",
+    "    \n",
+    "    # Formatage des sources avec section, page et date\n",
+    "    formatted_sources = \"\\n\".join([\n",
+    "        f\"[Document: {doc['file_name']}, Section: {doc['section']}, Page: {doc['page']}, Mise à jour: {doc['update_date']}]\" \n",
+    "        for doc in docs_details\n",
+    "    ])\n",
+    "    \n",
+    "    # Instructions système mises à jour pour inclure la question dans la réponse\n",
     "    system_instructions = (\n",
-    "        \"Tu es un instructeur de dossier du Kap numérique. Tu reçois des questions par mail sur le dispositif Kap numérique \"\n",
-    "        \"et tu dois y répondre en te basant sur les documents officiels, la fiche d'action et la FAQ du Kap numérique.\\n\\n\"\n",
-    "        \"Ta réponse doit être structurée en deux parties :\\n\"\n",
-    "        \"1. Réponse : Fournis une réponse claire, détaillée et structurée. Utilise des listes à puces ou une numérotation si nécessaire.\\n\"\n",
-    "        \"2. Sources : Pour chaque information importante, cite la provenance sous la forme :\\n\"\n",
-    "        \"   [Document: Nom du document, Section: Nom de la section, Page: Numéro de page].\\n\\n\"\n",
-    "        \"Exemple:\\n\"\n",
-    "        \"Question: Quels types de projets peuvent être financés par KAP numérik?\\n\\n\"\n",
+    "        \"Tu es un instructeur expert du dispositif KAP Numérique. Tu réponds à des questions en te basant uniquement sur les documents officiels fournis.\\n\\n\"\n",
+    "        \"Consignes de réponse :\\n\"\n",
+    "        \"1. Commence ta réponse en répétant la question posée, par exemple : 'En réponse à votre question : \\\"[question]\\\", voici les informations demandées :'\\n\"\n",
+    "        \"2. Fournis une réponse concise et structurée.\\n\"\n",
+    "        \"3. Utilise des listes à puces pour organiser les informations.\\n\"\n",
+    "        \"4. Cites systématiquement les sources avec le format suivant : [Document: Nom du document, Section: Nom de la section, Page: Numéro de page, Mise à jour: Date].\\n\\n\"\n",
+    "        \"Exemple de réponse attendue :\\n\"\n",
+    "        \"Question: Quels types de projets peuvent être financés par KAP Numérique ?\\n\\n\"\n",
     "        \"Réponse:\\n\"\n",
-    "        \"   Le dispositif KAP numérik finance des projets liés à la stratégie digitale de l'entreprise dans une phase d'amorçage. Ces projets se répartissent en deux catégories principales:\\n\"\n",
-    "        \"   1. Projets liés à la visibilité numérique et aux services aux usagers:\\n\"\n",
-    "        \"      - Digitalisation de contenus (logo, charte graphique)\\n\"\n",
-    "        \"      - Création ou refonte d'un site internet ou d'une solution de vente en ligne\\n\"\n",
-    "        \"      - Référencement naturel (SEO)\\n\"\n",
-    "        \"      - Abonnement à une place de marché\\n\"\n",
-    "        \"      - Développement de la présence sur les réseaux sociaux\\n\"\n",
-    "        \"      - Développement d'une application mobile\\n\"\n",
-    "        \"      - Mise en place de chatbots\\n\"\n",
-    "        \"   2. Projets liés à la sécurité informatique:\\n\"\n",
-    "        \"      - Audits de sécurité, tests d'intrusion\\n\"\n",
-    "        \"      - Sécurisation des sites internet\\n\"\n",
-    "        \"      - Sécurisation des données (conformité RGPD, correction des failles)\\n\"\n",
-    "        \"      - Assistance à la création de VPN\\n\"\n",
-    "        \"      - Prestation de sauvegarde des données\\n\\n\"\n",
+    "        \"En réponse à votre question : \\\"Quels types de projets peuvent être financés par KAP Numérique ?\\\", voici les informations demandées :\\n\"\n",
+    "        \"- Projets de visibilité numérique et services aux usagers :\\n\"\n",
+    "        \"  - Digitalisation de contenus (logo, charte graphique)\\n\"\n",
+    "        \"  - Création ou refonte d’un site internet ou d’une solution de vente en ligne\\n\"\n",
+    "        \"  - Référencement naturel (SEO)\\n\"\n",
+    "        \"  - Abonnement à une place de marché\\n\"\n",
+    "        \"  - Développement de la présence sur les réseaux sociaux\\n\"\n",
+    "        \"  - Développement d’une application mobile\\n\"\n",
+    "        \"  - Mise en place de chatbots\\n\"\n",
+    "        \"- Projets de sécurité informatique :\\n\"\n",
+    "        \"  - Audits de sécurité, tests d’intrusion\\n\"\n",
+    "        \"  - Sécurisation des sites internet\\n\"\n",
+    "        \"  - Sécurisation des données (conformité RGPD, correction des failles)\\n\"\n",
+    "        \"  - Assistance à la création de VPN\\n\"\n",
+    "        \"  - Prestation de sauvegarde des données\\n\\n\"\n",
     "        \"Sources:\\n\"\n",
-    "        \"   [Document: FA_1.2.5_kap_numerique.pdf, Section: 3. DESCRIPTION TECHNIQUE, Page: 2]\\n\"\n",
-    "        \"   [Document: FAQs-Kap Numerique V2, Section: 3-Projets finançables, Mise à jour: 04/03/2025]\\n\\n\"\n",
+    "        \"[Document: FA_1.2.5_kap_numerique.pdf, Section: 3. DESCRIPTION TECHNIQUE, Page: 2, Mise à jour: Date non disponible]\\n\"\n",
+    "        \"[Document: FAQs-Kap Numerique V2, Section: 3-Projets finançables, Page: 1, Mise à jour: 04/03/2025]\\n\\n\"\n",
     "        \"Maintenant, réponds à la question en respectant ce format.\"\n",
     "    )\n",
     "    \n",
@@ -212,11 +228,13 @@
     "        {\"role\": \"user\", \"content\": user_prompt}\n",
     "    ]\n",
     "    \n",
-    "    # Appel au modèle LLM\n",
-    "    response = llm.invoke(messages)\n",
-    "    \n",
-    "    # La réponse du LLM devrait déjà être formatée comme demandé\n",
-    "    return {\"answer\": response.content}\n",
+    "    # Appel au modèle LLM avec gestion des erreurs\n",
+    "    try:\n",
+    "        response = llm.invoke(messages)\n",
+    "        return {\"answer\": response.content}\n",
+    "    except Exception as e:\n",
+    "        return {\"answer\": f\"Erreur lors de la génération de la réponse : {e}\"}\n",
+    "\n",
     "\n",
     "# Construction du graphe d'application\n",
     "graph_builder = StateGraph(State).add_sequence([retrieve, generate])\n",
@@ -227,58 +245,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tapez 'exit' pour quitter.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Tapez 'exit' pour quitter.\n",
       "\n",
-      "Réponse : **Réponse :**\n",
+      "Réponse : En réponse à votre question : \"J'ai 11 salariés, quel est le montant maximal de ma subvention ?\", voici les informations demandées :\n",
       "\n",
-      "Les conditions d'éligibilité liées à la taille et au chiffre d'affaires pour le dispositif KAP numérique sont les suivantes :\n",
-      "\n",
-      "1. **Entreprises :**\n",
-      "   - **0 à 9 salariés :** Le chiffre d'affaires doit être inférieur à 500 000 €.\n",
-      "   - **10 à 19 salariés :** Le chiffre d'affaires doit être inférieur à 1 000 000 €.\n",
-      "\n",
-      "2. **Professions libérales non réglementées :**\n",
-      "   - Le chiffre d'affaires doit être inférieur à 500 000 €.\n",
-      "\n",
-      "3. **Associations :**\n",
-      "   - Le nombre de salariés doit être inférieur à 10.\n",
-      "\n",
-      "**Sources :**\n",
-      "- [Document: FA_1.2.5_kap_numerique.pdf, Section: 2. Éligibilité, Page: 1]\n",
-      "- [Document: FAQs-Kap Numerique V2, Section: 2-Éligibilité, Mise à jour: 04/03/2025]\n",
-      "\n",
-      "Réponse : Question: Quels sont les critères de sélection des projets pour le dispositif KAP numérik?\n",
-      "\n",
-      "Réponse:\n",
-      "Les critères de sélection des projets pour le dispositif KAP numérik sont les suivants :\n",
-      "\n",
-      "1. **Cohérence avec les lignes de partage du programme** :\n",
-      "   - Les opérations doivent être en cohérence avec les lignes de partage du programme pour assurer une efficacité optimale et sécuriser l’usage des fonds communautaires sur le territoire réunionnais.\n",
-      "\n",
-      "2. **Compatibilité avec la réglementation des aides d’état** :\n",
-      "   - Les projets soutenus doivent être compatibles avec la réglementation des aides d’état.\n",
-      "\n",
-      "3. **Capacité technique et financière des porteurs de projet** :\n",
-      "   - Les porteurs de projet doivent disposer de la capacité technique et financière nécessaire pour mener à bien les opérations sélectionnées.\n",
-      "\n",
-      "4. **Numérisation des activités des entreprises** :\n",
-      "   - Les projets doivent permettre une numérisation des activités des entreprises comme proposé dans le Schéma Régional de Développement Économique d'innovation et d'internationalisation (SRDEII), notamment au travers du comité de filière numérique.\n",
+      "- Votre entreprise étant composée de 11 salariés, elle entre dans la catégorie des entreprises de 10 à 19 salariés.\n",
+      "- Le montant maximal de la subvention pour les entreprises de cette taille est de 2 000 €.\n",
+      "- Cette subvention représente 50% des dépenses éligibles HT, avec un plafond de remboursement de 2 000 €.\n",
       "\n",
       "Sources:\n",
-      "   [Document: FA_1.2.5_kap_numerique.pdf, Section: 6. PERIMETRE DES DEPENSES ELIGIBLES ET NON ELIGIBLES, Page: 4]\n"
+      "[Document: FA_1.2.5_kap_numerique.pdf, Section: 4. Montant de l'aide, Page: 4, Mise à jour: Date non disponible]\n",
+      "[Document: FA_1.2.5_kap_numerique.pdf, Section: 4. Montant de l'aide, Page: 6, Mise à jour: Date non disponible]\n",
+      "\n",
+      "Réponse : En réponse à votre question : \"Quels sont les codes APE inéligibles ?\", voici les informations demandées :\n",
+      "\n",
+      "- **Codes APE inéligibles dans le secteur numérique :**\n",
+      "  - 58.29A : Édition de logiciels système et de réseau\n",
+      "  - 58.29B : Édition de logiciels outils de développement et de langages\n",
+      "  - 58.29C : Édition de logiciels applicatifs\n",
+      "  - 63.12Z : Portails internet Infogérance\n",
+      "  - 62.01Z : Programmation informatique\n",
+      "  - 62.02B : Tierce maintenance de systèmes et d'applications informatiques\n",
+      "  - 62.03Z : Gestion d'installations informatiques\n",
+      "  - 62.09Z : Autres activités informatiques\n",
+      "  - 63.11Z : Traitement de données, hébergement et activités connexes\n",
+      "\n",
+      "- **Autres secteurs inéligibles :**\n",
+      "  - Secteurs définis par le Règlement général d'exemption par catégorie (RGEC)\n",
+      "  - Production primaire de produits agricoles, pêche et aquaculture\n",
+      "  - Activités financières et promotion immobilière\n",
+      "  - Professions libérales réglementées relevant d'un ordre professionnel\n",
+      "\n",
+      "Sources :\n",
+      "[Document: FA_1.2.5_kap_numerique.pdf, Section: ANNEXE 1 : LISTE DES CODES APE DES ENTREPRISES RELEVANT DU SECTEUR NUMÉRIQUE ET INÉLIGIBLE À L’ACTION, Page: 7, Mise à jour: Date non disponible]\n",
+      "[Document: FA_1.2.5_kap_numerique.pdf, Section: ANNEXE 2 : EXEMPLE DE GRILLE DE NOTATION, Page: 8, Mise à jour: Date non disponible]\n"
      ]
     }
    ],
