--- a/notebook/prototype.ipynb
+++ b/notebook/prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,18 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Connexion réussie avec pymysql.\n",
-      "\n",
-      "📋 Résultats de la recherche :\n",
-      "{'id': 777, 'Numero': '82-2069', 'date_creation': '14/03/2024 11:57', 'derniere_modification': '31/01/2025 10:58', 'nom_usager': 'FREDERIC GAUDIN', 'agent_affecter': 'anaelle.nimba@cr-reunion.fr', 'instructeur': 'anaelle.nimba@cr-reunion.fr', 'valideur': 'bruno.bertil@cr-reunion.fr', 'statut': 'Mandatement', 'civilite': '', 'montant': '3200', 'statut_visible_usager': 'Mandatement'}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'  \\nif __name__ == \"__main__\":\\n    try:\\n        db_manager = DatabaseManager()\\n        if db_manager.tester_connexion():\\n            resultats = db_manager.rechercher_dossier(numero_dossier=\\'82-2069\\')\\n            print(\"\\n📋 Résultats de la recherche :\")\\n            for dossier in resultats:\\n                print(dossier)\\n        else:\\n            print(\" Échec de la connexion.\")\\n    except Exception as e:\\n        print(f\" Erreur critique : {e}\")\\n        traceback.print_exc()\\n'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -136,33 +136,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_dossier_number(question:str)-> List[str]:\n",
-    "    \"\"\"\n",
-    "        Fonction qui permet de chercher informations sur un prestatire par rapoort à son numéro de dossier\n",
-    "    \"\"\"\n",
-    "    #pattern pour rechercher les numéros de dossier (format xx-xxxx)\n",
+    "# Fonction pour extraire le numéro de dossier de la question\n",
+    "def extract_dossier_number(question: str) -> List[str]:\n",
+    "    # Pattern pour rechercher les numéros de dossier (format XX-XXXX ou similaire)\n",
     "    patterns = [\n",
-    "        r'\\b\\d{2}-\\d{4}\\b', # Format 82-2069\n",
+    "        r'\\b\\d{2}-\\d{4}\\b',  # Format 82-2069\n",
     "        r'\\bdossier\\s+(?:n°|numéro|numero|n|°|)?\\s*(\\w+-\\w+)\\b',  # Format avec \"dossier n° XXX-XXX\"\n",
     "        r'\\bdossier\\s+(?:n°|numéro|numero|n|°|)?\\s*(\\d+)\\b'  # Format avec \"dossier n° XXX\"\n",
-    "        \n",
     "    ]\n",
     "    \n",
-    "    resultats = []\n",
+    "    results = []\n",
     "    for pattern in patterns:\n",
-    "        matches = re.findall(pattern,question,re.IGNORECASE)\n",
-    "        \n",
+    "        matches = re.findall(pattern, question, re.IGNORECASE)\n",
     "        if matches:\n",
-    "            resultats.extend(matches)\n",
-    "            \n",
-    "    return list(set(resultats)) # Éliminer les doublons\n",
+    "            results.extend(matches)\n",
+    "    \n",
+    "    return list(set(results))  # Éliminer les doublons\n",
+    "    \n",
+    "   \n",
     "\n",
     "# Fonction pour rechercher les informations d'un dossier dans la base de données via DatabaseManager\n",
-    "def search_dossier(dossier_numbers: List[str]) -> List[Dict[str, Any]]:\n",
+    "def search_dossier_in_db(dossier_numbers: List[str]) -> List[Dict[str, Any]]:\n",
     "    try:\n",
     "        db_manager = DatabaseManager()\n",
     "        \n",
@@ -180,8 +178,9 @@
     "    except Exception as e:\n",
     "        print(f\"Erreur lors de la recherche dans la base de données: {e}\")\n",
     "        return []\n",
+    "\n",
     "        \n",
-    "def db_resultats_to_documents(resultats:List[Dict[str,Any]]) -> List[Document]:\n",
+    "def db_resultats_to_documents(resultats: List[Dict[str,Any]]) -> List[Document]:\n",
     "    documents = [] \n",
     "    for resultat in resultats:\n",
     "        #contenu formaté à partir des donne du dossier\n",
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +235,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Charger les documents depuis le dossier \"data\"\n",
     "try:\n",
     "    loader = DirectoryLoader(\n",
@@ -252,12 +250,14 @@
     "        for i, doc in enumerate(docs[:5]):  # Afficher les 5 premiers documents\n",
     "            # Extraire le nom du fichier depuis la métadonnée \"source\"\n",
     "            source = doc.metadata.get(\"source\", \"inconnu\")\n",
-    "            file_title = os.path.basename(source)        \n",
+    "            file_title = os.path.basename(source)\n",
     "            print(f\"Document {i+1}:\")\n",
     "            print(f\"Nom du fichier : {file_title}\")\n",
     "            print(\"-\" * 50)\n",
     "    else:\n",
     "        print(\"Aucun document n'a été chargé.\")\n",
+    "        # Initialiser docs comme une liste vide pour éviter les erreurs\n",
+    "        docs = []\n",
     "except Exception as e:\n",
     "    print(f\"Erreur lors du chargement des documents: {e}\")\n",
     "    docs = []"
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
     "class State(TypedDict):\n",
     "    question: str\n",
     "    context: List[Document]  # Liste d'objets Document\n",
-    "    db_result: List[Dict[str,Any]] # Résultats de la base de données\n",
+    "    db_results: List[Dict[str,Any]] # Résultats de la base de données\n",
     "    answer: str\n",
     "\n",
     "# Fonction de récupération des données de la base de données\n",
@@ -327,7 +327,7 @@
     "    # Si des numéros de dossier sont trouvés, rechercher dans la base de données\n",
     "    db_results = []\n",
     "    if dossier_numbers:\n",
-    "        db_results = search_dossier(dossier_numbers)\n",
+    "        db_results = search_dossier_in_db(dossier_numbers)\n",
     "    \n",
     "    return {\"db_results\": db_results}\n",
     " \n",
@@ -351,31 +351,28 @@
     "\n",
     "\n",
     "# Fonction de génération de la réponse\n",
-    "def generate(state: State)-> Dict[str,Any]:\n",
+    "def generate(state: State) -> Dict[str, Any]:\n",
     "    try:\n",
-    "        #On verifie d'abord si le contexte est vide \n",
+    "        # Vérifier si le contexte est vide\n",
     "        if not state[\"context\"]:\n",
-    "            return{\"answer\": \"Je n'ai pas trouvé d'informations pertinentes pour votre question\"}\n",
+    "            return {\"answer\": \"Je n'ai pas trouvé d'informations pertinentes pour répondre à votre question.\"}\n",
     "        \n",
     "        # Agrégation du contenu des documents récupérés avec détails sur les sources\n",
     "        docs_details = []\n",
-    "        for doc in state[\"context\"]:\n",
-    "        \n",
-    "            \n",
+    "        for doc in state[\"context\"]:  \n",
+    "            source = doc.metadata.get(\"source\", \"Source inconnue\")      \n",
     "            # Traitement spécial pour les documents de la base de données\n",
-    "            if source == \"base_de_donnéee\":\n",
-    "                file_name = f\"Base de doonée - Dossier {doc.metadata.get('numer','inconnu')}\"\n",
-    "                section = doc.metadata.get(\"section\",\"Section non spécifiée\")\n",
+    "            if source == \"base_de_donnees\":\n",
+    "                file_name = f\"Base de données - Dossier {doc.metadata.get('numero', 'inconnu')}\"\n",
+    "                section = doc.metadata.get(\"section\", \"Section non spécifiée\")\n",
     "                page = \"N/A\"\n",
     "                update_date = doc.metadata.get(\"update_date\", \"Date non disponible\")\n",
-    "\n",
-    "            else: # Document dans la base de connaissance , en dehors de la Db\n",
-    "                source = doc.metadata.get(\"source\", \"Source inconnue\")\n",
+    "            else:\n",
     "                file_name = os.path.basename(source)\n",
     "                section = doc.metadata.get(\"section\", \"Section non spécifiée\")\n",
     "                page = doc.metadata.get(\"page\", \"Page non spécifiée\")\n",
     "                update_date = doc.metadata.get(\"update_date\", \"Date non disponible\")\n",
-    "            \n",
+    "\n",
     "            docs_details.append({\n",
     "                \"content\": doc.page_content,\n",
     "                \"file_name\": file_name,\n",
@@ -383,13 +380,13 @@
     "                \"page\": page,\n",
     "                \"update_date\": update_date\n",
     "            })\n",
-    "        \n",
+    "\n",
     "        # Agrégation du contenu des documents\n",
     "        docs_content = \"\\n\\n\".join(doc[\"content\"] for doc in docs_details)\n",
-    "        \n",
+    "\n",
     "        # Formatage des sources avec section, page et date\n",
     "        formatted_sources = \"\\n\".join([\n",
-    "            f\"[Document: {doc['file_name']}, Section: {doc['section']}, Page: {doc['page']}, Mise à jour: {doc['update_date']}]\" \n",
+    "            f\"[Document: {doc['file_name']}, Section: {doc['section']}, Page: {doc['page']}, Mise à jour: {doc['update_date']}]\"\n",
     "            for doc in docs_details\n",
     "        ])\n",
     "        \n",
@@ -445,25 +442,26 @@
     "            return {\"answer\": f\"Erreur lors de la génération de la réponse : {e}\"}\n",
     "    except Exception as e:\n",
     "        print(f\"Erreur dans la fonction generate: {e}\")\n",
-    "        return{\"answer\":f\"Une erreur s'est prooduite lors du traitement de votre demande: {e}\"} \n",
+    "        return{\"answer\":f\"Une erreur s'est produite lors du traitement de votre demande: {e}\"} \n",
     "\n",
+    "# Construction du graphe d'application\n",
     "def build_graph():\n",
     "    try:\n",
-    "        #définir les noeuds du graphe\n",
+    "        # Définir les nœuds du graphe\n",
     "        workflow = StateGraph(State)\n",
     "        \n",
-    "        #Ajouter les noeuds individellement pour mieux contrôler\n",
-    "        workflow.add_node(\"search_database\",search_database)\n",
-    "        workflow.add_node(\"retrieve\",retrieve)\n",
-    "        workflow.add_node(\"generate\",generate)\n",
+    "        # Ajouter les nœuds individuellement pour mieux contrôler\n",
+    "        workflow.add_node(\"search_database\", search_database)\n",
+    "        workflow.add_node(\"retrieve\", retrieve)\n",
+    "        workflow.add_node(\"generate\", generate)\n",
     "        \n",
-    "        #définir les transitions entre les  noeuds\n",
+    "        # Définir les transitions entre les nœuds\n",
     "        workflow.add_edge(START, \"search_database\")\n",
     "        workflow.add_edge(\"search_database\", \"retrieve\")\n",
     "        workflow.add_edge(\"retrieve\", \"generate\")\n",
     "        workflow.add_edge(\"generate\", END)\n",
     "        \n",
-    "        #compiler le graphe\n",
+    "        # Compiler le graphe\n",
     "        return workflow.compile()\n",
     "    except Exception as e:\n",
     "        print(f\"Erreur lors de la construction du graphe: {e}\")\n",
@@ -476,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -486,9 +484,28 @@
       "Tapez 'exit' pour quitter.\n",
       " Connexion réussie avec pymysql.\n",
       " Connexion réussie avec pymysql.\n",
-      "Erreur dans la fonction retrieve: 'db_results'\n",
       "\n",
-      "Réponse : Je n'ai pas trouvé d'informations pertinentes pour votre question\n"
+      "Réponse : En réponse à votre question : \"J'ai déposé les documents le 19/03/2025 'factures à valider', je n'ai pas reçu de mail ou de notification concernant la suite. Pourriez vous me renseigner concernant ce point la référence est la n° : 82-2240.\", voici les informations demandées :\n",
+      "\n",
+      "- **Statut actuel du dossier** : Votre dossier est actuellement au statut \"Factures à valider\".\n",
+      "- **Dernière modification** : La dernière modification de votre dossier date du 19/03/2025 à 09:34.\n",
+      "- **Agent affecté** : L'agent en charge de votre dossier est boina.moinahadidja@cr-reunion.fr.\n",
+      "- **Instructeur** : L'instructeur de votre dossier est également boina.moinahadidja@cr-reunion.fr.\n",
+      "- **Prochaines étapes** :\n",
+      "  - Le service instructeur va contrôler les pièces transmises et les livrables.\n",
+      "  - Une fois les factures validées, le paiement sera effectué par la Paierie régionale.\n",
+      "  - Le traitement par la région peut prendre quelques semaines.\n",
+      "\n",
+      "Pour plus de détails sur les étapes suivantes, veuillez consulter les sections pertinentes des documents officiels :\n",
+      "\n",
+      "- **Étapes après le dépôt du dossier** :\n",
+      "  - Étape 1 : Validation administrative\n",
+      "  - Étape 2 : Réalisation du projet et justificatifs\n",
+      "  - Étape 3 : Contrôle et paiement\n",
+      "\n",
+      "Sources :\n",
+      "[Document: FAQs-Kap Numerique V2, Section: 6 - Après le dépôt du dossier, Page: 6, Mise à jour: 04/03/2025]\n",
+      "[Document: FAQs-Kap Numerique V2, Section: 7 - Rôle du prestataire numérique, Page: 7, Mise à jour: 04/03/2025]\n"
      ]
     }
    ],
@@ -512,29 +529,27 @@
     "            user_query = input(\"\\nPosez votre question : \")\n",
     "            if user_query.lower() in [\"exit\", \"quit\"]:\n",
     "                break\n",
-    "            \n",
-    "            # Initialisation de l'état avec des listes vides pour context et db_results\n",
+    "                \n",
+    "            # Initialiser l'état avec des listes vides pour context et db_results\n",
     "            initial_state = {\n",
     "                \"question\": user_query,\n",
     "                \"context\": [],\n",
     "                \"db_results\": [],\n",
-    "                \"answer\": \"\"}\n",
+    "                \"answer\": \"\"\n",
+    "            }\n",
     "            \n",
-    "            # On invoque  le graphe \n",
+    "            # Invoquer le graphe avec gestion d'erreur\n",
     "            try:\n",
     "                state = graph.invoke(initial_state)\n",
-    "                # On peut ici enrichir la réponse en affichant aussi la provenance des passages utilisés\n",
     "                print(\"\\nRéponse :\", state[\"answer\"])\n",
     "            except Exception as e:\n",
-    "                print(f\"\\n Erreur lors de l'execution du graphe {e}\")\n",
+    "                print(f\"\\nErreur lors de l'exécution du graphe: {e}\")\n",
     "                \n",
     "        except KeyboardInterrupt:\n",
     "            print(\"\\nProgramme interrompu par l'utilisateur.\")\n",
-    "            break \n",
+    "            break\n",
     "        except Exception as e:\n",
-    "            print(f\"\\nErreur innatendue: {e}\")\n",
-    "\n",
-    "           "
+    "            print(f\"\\nErreur inattendue: {e}\")"
    ]
   }
  ],
