[📝UPDATE] Ajout de nouvelles élément dans la base de connaissance notamment de nouvelles règles issue des conversation entre instructeur et Bénéficiaire, ajout aussi d'une cinquantaine d'échange entre instructeur et Bénéficiaire, afin d'améliorer la réponse et la précision du chatbot

--- a/notebook/prototype.ipynb
+++ b/notebook/prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,8 @@
     "from langgraph.graph import START, StateGraph\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "from langchain_core.documents import Document\n",
+    "import logging\n",
+    "logging.basicConfig(level=logging.DEBUG)\n",
     "\n",
     "\n",
     "\n",
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +60,7 @@
        "'  \\nif __name__ == \"__main__\":\\n    try:\\n        db_manager = DatabaseManager()\\n        if db_manager.tester_connexion():\\n            resultats = db_manager.rechercher_dossier(numero_dossier=\\'82-2069\\')\\n            print(\"\\n📋 Résultats de la recherche :\")\\n            for dossier in resultats:\\n                print(dossier)\\n        else:\\n            print(\" Échec de la connexion.\")\\n    except Exception as e:\\n        print(f\" Erreur critique : {e}\")\\n        traceback.print_exc()\\n'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +79,7 @@
     "        if not all([self.config['user'], self.config['host'], self.config['database']]):\n",
     "            raise ValueError(\"Variables essentielles manquantes : SQL_USER, SQL_HOST ou SQL_DB.\")\n",
     "        \n",
-    "\n",
+    "    \"\"\"\"\n",
     "    def tester_connexion(self) -> bool:\n",
     "        try:\n",
     "            conn = pymysql.connect(**self.config)\n",
@@ -91,7 +93,7 @@
     "        except pymysql.Error as erreur:\n",
     "            print(f\" Échec de la connexion : {erreur}\")\n",
     "            return False\n",
-    "\n",
+    "    \"\"\"\n",
     "    def rechercher_dossier(self, numero_dossier: Optional[str] = None, **kwargs) -> List[Dict[str, Any]]:\n",
     "        try:\n",
     "            conn = pymysql.connect(**self.config)\n",
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +187,7 @@
     "    for resultat in resultats:\n",
     "        #contenu formaté à partir des donne du dossier\n",
     "        content = f\"\"\"\n",
-    "        -Informations sur le dossier {resultat.get('Numero', 'N/A')}:\n",
+    "        - Informations sur le dossier {resultat.get('Numero', 'N/A')}:\n",
     "        - Nom de l'usager: {resultat.get('nom_usager', 'N/A')}\n",
     "        - Date de création: {resultat.get('date_creation', 'N/A')}\n",
     "        - Dernière modification: {resultat.get('derniere_modification', 'N/A')}\n",
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,13 +278,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "c:\\Python312\\Lib\\site-packages\\langchain_mistralai\\embeddings.py:181: UserWarning: Could not download mistral tokenizer from Huggingface for calculating batch sizes. Set a Huggingface token via the HF_TOKEN environment variable to download the real tokenizer. Falling back to a dummy tokenizer that uses `len()`.\n",
       "  warnings.warn(\n"
      ]
@@ -295,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +339,7 @@
     "# Fonction de récupération (retrieval) des documents pertinents\n",
     "def retrieve(state: State) -> Dict[str, Any]:\n",
     "    try:\n",
-    "        # Récupérer les documents pertinents depuis le vectorstore\n",
+    "        # Récupérer les 3 documents les plus pertinents depuis le vectorstore\n",
     "        retrieved_docs = vector_store.similarity_search(state[\"question\"], k=3)\n",
     "        \n",
     "        # Convertir les résultats de la base de données en documents\n",
@@ -396,8 +400,8 @@
     "            \"Consignes de réponse :\\n\"\n",
     "            \"1. Commence ta réponse en répétant la question posée, par exemple : 'En réponse à votre question : \\\"[question]\\\", voici les informations demandées :'\\n\"\n",
     "            \"2. Fournis une réponse concise et structurée.\\n\"\n",
-    "            \"3. Utilise des phrase et listes à puces pour organiser les informations.\\n\"\n",
-    "            \"4. Si la question concerne un dossier spécifique, vérifie d'abord les informations de la base de données. Indique clairement le statut actuel du dossier, la date de dernière modification, et toute information pertinente sur le demandeur.\\n\"\n",
+    "            \"3. Utilise des phrases et des listes à puces pour organiser les informations.\\n\"\n",
+    "            \"4. Si la question concerne un dossier spécifique, vérifie d'abord les informations de la base de données. Indique dans ta réponse,  clairement le statut actuel du dossier, la date de dernière modification, et toute information pertinente sur le demandeur.\\n\"\n",
     "            \"5.Pour les questions sur le paiement, si le statut est 'Mandatement', indique que le paiement est en cours de traitement et devrait être effectué dans les jours suivants.\\n\"\n",
     "            \"6. Cites systématiquement les sources avec le format suivant : [Document: Nom du document, Section: Nom de la section, Page: Numéro de page, Mise à jour: Date].\\n\\n\"\n",
     "            \n",
@@ -474,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -485,27 +489,7 @@
       " Connexion réussie avec pymysql.\n",
       " Connexion réussie avec pymysql.\n",
       "\n",
-      "Réponse : En réponse à votre question : \"J'ai déposé les documents le 19/03/2025 'factures à valider', je n'ai pas reçu de mail ou de notification concernant la suite. Pourriez vous me renseigner concernant ce point la référence est la n° : 82-2240.\", voici les informations demandées :\n",
-      "\n",
-      "- **Statut actuel du dossier** : Votre dossier est actuellement au statut \"Factures à valider\".\n",
-      "- **Dernière modification** : La dernière modification de votre dossier date du 19/03/2025 à 09:34.\n",
-      "- **Agent affecté** : L'agent en charge de votre dossier est boina.moinahadidja@cr-reunion.fr.\n",
-      "- **Instructeur** : L'instructeur de votre dossier est également boina.moinahadidja@cr-reunion.fr.\n",
-      "- **Prochaines étapes** :\n",
-      "  - Le service instructeur va contrôler les pièces transmises et les livrables.\n",
-      "  - Une fois les factures validées, le paiement sera effectué par la Paierie régionale.\n",
-      "  - Le traitement par la région peut prendre quelques semaines.\n",
-      "\n",
-      "Pour plus de détails sur les étapes suivantes, veuillez consulter les sections pertinentes des documents officiels :\n",
-      "\n",
-      "- **Étapes après le dépôt du dossier** :\n",
-      "  - Étape 1 : Validation administrative\n",
-      "  - Étape 2 : Réalisation du projet et justificatifs\n",
-      "  - Étape 3 : Contrôle et paiement\n",
-      "\n",
-      "Sources :\n",
-      "[Document: FAQs-Kap Numerique V2, Section: 6 - Après le dépôt du dossier, Page: 6, Mise à jour: 04/03/2025]\n",
-      "[Document: FAQs-Kap Numerique V2, Section: 7 - Rôle du prestataire numérique, Page: 7, Mise à jour: 04/03/2025]\n"
+      "Réponse : Erreur lors de la génération de la réponse : Error response 429 while fetching https://api.mistral.ai/v1/chat/completions: {\"message\":\"Requests rate limit exceeded\"}\n"
      ]
     }
    ],
