--- a/notebook/prototype.ipynb
+++ b/notebook/prototype.ipynb
@@ -889,6 +889,27 @@
     "        except Exception as e:\n",
     "            print(f\"\\nErreur inattendue: {e}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'python' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mpython\u001b[49m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m-\u001b[39mversion\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'python' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
